[package]
name = "twitch_recall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
scraper = "0.13.0"
chrono = "0.4.19"
sha1_smol = "1"